--- a/style.css
+++ b/style.css
@@ -35,6 +35,10 @@ header{
     float: left;
 }
 
+.float-right{
+    float: right;
+}
+
 .w-20{
     width: 20%;
 }
@@ -139,6 +143,7 @@ p{
     font-size: 1.4em;
     max-width: auto;
     font-weight: bold;
+    margin-top: 50px;
 }
 
 .bottom-header{
@@ -150,16 +155,70 @@ p{
     font-size: 1.2em;
 }
 
-/* Section-1 */
+/* First-section */
 
-.section-1{
+.first-section{
     background-image: url(./img/item1.svg);
     background-size: contain;
     background-repeat: no-repeat;
     height: 600px;
-    width: 600px;
+    width: 700px;
 }
 
 h2{
-    font-size: 5em;
+    font-size: 3em;
+}
+
+/* Second-section*/
+
+.second-section{
+    background-image: url(./img/item2.svg);
+    background-size: contain;
+    background-repeat: no-repeat;
+    height: 600px;
+    width: 700px;
+}
+
+/* Thrid-section */
+
+.third-section{
+    background-image: url(./img/item3.svg);
+    background-size: contain;
+    background-repeat: no-repeat;
+    height: 600px;
+    width: 700px;
+}
+
+/* Fourth-section */
+
+.fourth-section{
+    background-image: url(./img/item4-big.svg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 600px;
+    width: 700px;
+    /* transform: translate(-50%, -50%); */
+    width: 100%;
+}
+
+.float-center{
+    width: 100%;
+    text-align: center;
+    margin: 0 auto;
+}
+
+/* Before-Footer */
+
+.before-footer{
+    margin-top: 75px;
+    background-image: url(./img/stars.svg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: auto;
+    font-size: 0.8em;
+}
+
+.cyan{
+    background-color: rgb(142,161,225);
+    color: white;
 }
